--- a/index.html
+++ b/index.html
@@ -507,7 +507,10 @@
             {name: "Citi(R) / AAdvantage(R) Platinum Select(R) World Elite Mastercard(R)", code: "3004018"},
             {name: "Citi(R) / AAdvantage Business(TM) World Elite Mastercard(R)", code: "3004019"},
             {name: "Citi(R) / AAdvantage(R) Executive World Elite(TM) Mastercard(R)", code: "3004054"},
-            {name: "Citi AAdvantage (R) Globe(TM) Mastercard (R)", code: "5048392"}
+            {name: "Citi AAdvantage (R) Globe(TM) Mastercard (R)", code: "5048392"},
+            {name: "Bilt Blue Card", code: "5048395"},
+            {name: "Bilt Obsidian Card", code: "5048397"},
+            {name: "Bilt Palladium Card", code: "5048396"}
         ];
         
         let selectedCards = [];
